<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--
Strings to use instead of hard coding
-->
    <string name="app_name">Translator</string>
    <string name="language">Language</string>
    <string name="camera_view">Camera</string>
    <string name="splash_view">Splash</string>
    <string name="welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="translate">Translate:</string>
    <string name="english">English/Anglais/Inglés</string>
    <string name="french">French/Français/Francés</string>
    <string name="spanish">Spanish/Espagnol/Español</string>
    <string name="chinese">Chinese/中国</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="toLabel">Translate to:</string>
    <string name="goButton">Go!</string>

</resources>
