<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background = "#000000">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:typeface="serif"
        android:id="@+id/welcome_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/translate"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:typeface="serif"
        android:id="@+id/translate_label"
        android:layout_below="@+id/welcome_label"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/translate_label"
        android:id="@+id/translateGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:typeface="serif"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/radioButtonFromEnglish"
            android:layout_marginLeft="35dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:onClick="fromSetClick"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:typeface="serif"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/radioButtonFromFrench"
            android:layout_marginLeft="35dp"
            android:checked="false"
            android:enabled="true"
            android:clickable="true"
            android:onClick="fromSetClick"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:typeface="serif"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/radioButtonFromSpanish"
            android:layout_marginLeft="35dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:onClick="fromSetClick"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/translateGroup"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/toLabel"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:typeface="serif"
        android:id="@+id/to_label"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/to_label"
        android:id="@+id/toGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:typeface="serif"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/radioButtonToEnglish"
            android:layout_marginLeft="35dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:onClick="toSetClick"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:typeface="serif"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/radioButtonToFrench"
            android:layout_marginLeft="35dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:onClick="toSetClick"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:typeface="serif"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/radioButtonToSpanish"
            android:layout_marginLeft="35dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:onClick="toSetClick"/>

    </RadioGroup>
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/goButton"
        android:textColor="#ffffff"
        android:typeface="serif"
        android:textSize="30sp"
        android:id="@+id/go_button"
        android:clickable="true"
        android:enabled="true"
        android:background="@drawable/circle_button"
        android:layout_below="@+id/toGroup"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:onClick="toCamera"/>
</RelativeLayout>
</ScrollView>